# gl8080

./: CMakeLists.txt
include/glad/: glad.c  glad.h
res/: ._Info.plist
src/: #picking.h#  Screen.cpp  Screen.h  i8080.cpp  i8080.h  main.cpp  platform.cpp  platform.h
src/gl/: mesh.h  model.h  object.h  scene.h  shadow-shaders.h  shadow.h
src/glhelpers/: camera.h  shader.h  shaderloader.cpp  shaderloader.h  shaders.h  shaders_gles.h  textureloader.cpp  textureloader.h
src/imgui/backends/: imgui_impl_sdl.cpp
zip/: Makefile  zip.cbp
zip/src/: zip.c
zip/test/: Makefile
